hphp/hack/test/typecheck/instanceof/instanceof_static_with_reqs.php.like_types.exp
File "instanceof_static_with_reqs.php", line 10, characters 5-19:
  object
File "instanceof_static_with_reqs.php", line 17, characters 5-19:
  this as BaseField<T>
File "instanceof_static_with_reqs.php", line 26, characters 7-21:
  (this as BaseField<T> & INeedsFoo<T#2>)
  where T#2 super dynamic
File "instanceof_static_with_reqs.php", line 30, characters 5-19:
  this as BaseField<T>
File "instanceof_static_with_reqs.php", line 13, characters 7-28:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "instanceof_static_with_reqs.php", line 13, characters 7-28:
But got string
